# diablo_rpg

./: README.md  pyproject.toml
src/: main.py
src/assets/player/tilesets/: icon_tileset.tsx
src/assets/world/tilesets/: caracter_sprites.tsx  nature_tileset.tsx
src/characters/: __init__.py  base.py  sprites.py
src/conf/: settings.py
src/maps/: level_1.tmx  level_2.tmx  map_1.txt
src/weapons/: __init__.py  base.py  sprites.py
src/world/: __init__.py  map.py  sprites.py
