[tool.poetry]
name = "diablo-clone"
version = "0.1.0"
description = "A Diablo style RPG game"
authors = ["Warren Snowden <warren.snowden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
PyTMX = "^3.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
